# scoring_app

./: .gitignore  Cargo.toml  package-lock.json  package.json
assets/: tailwind.css
migrations/: 001_init.sql
src/: csv_import.rs  db.rs  main.rs  models.rs
src/ui/: comment_panel.rs  grading copy 2.rs  grading copy.rs  grading.rs  home.rs  individual_panel.rs  master_questions.rs  master_students.rs  matrix_table.rs  mod.rs  rating.rs  savebar.rs  scorerow.rs  scorerows.rs  search.rs  topbar.rs
