[package]
name = "grading_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

dioxus = { version = "0.7", features = ["desktop"] }
dioxus-desktop = "0.7"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

csv = "1"
rfd = "0.15"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
